--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -60,6 +60,21 @@
         <package.sources.skip>true</package.sources.skip>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jahia-public</id>
+            <name>Jahia Public Repository</name>
+            <url>https://devtools.jahia.com/nexus/content/groups/public</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>never</updatePolicy>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- Default Jahia Forge Modules -->
         <dependency>
