--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -280,10 +280,18 @@ jobs:
             - *attach-workspace
             - run:
                 name: Trigger the build of jahia-ee
-                command: curl -X POST --url 'https://circleci.com/api/v2/project/gh/Jahia/jahia-ee/pipeline'
-                  --header 'circle-token:'"$CIRCLECI_PIPELINE_LAUNCH_TOKEN"''
-                  --header 'content-type:application/json'
-                  --data '{ "parameters":{"run_core_code_change":true, "run_pull_request":true, "PARENT_IMAGE_TAG":"'"`cat image.tag`"'"} }'
+                command: |
+                  if curl -s -H "Authorization: token ${GITHUB_API_TOKEN}" https://api.github.com/repos/Jahia/jahia-ee/branches/$CIRCLE_BRANCH | jq -e -r .name
+                  then
+                    BRANCH=$CIRCLE_BRANCH
+                  else
+                    BRANCH=<< pipeline.parameters.BASE_BRANCH>>
+                  fi
+                  echo Trigger build on branch $BRANCH ..
+                  curl -X POST --url 'https://circleci.com/api/v2/project/gh/Jahia/jahia-ee/pipeline'
+                    --header 'circle-token:'"$CIRCLECI_PIPELINE_LAUNCH_TOKEN"''
+                    --header 'content-type:application/json'
+                    --data '{ "parameters":{"run_core_code_change":true, "run_pull_request":true, "PARENT_IMAGE_TAG":"'"`cat image.tag`"'"}, "branch":"'"$BRANCH"'" }'
 
 # Pipeline parameter must be declared
 parameters:
@@ -305,6 +313,9 @@ parameters:
   PARENT_IMAGE_TAG:
     type: string
     default: "current"
+  BASE_BRANCH:
+    type: string
+    default: "master"
 
 workflows:
   core_triggered:
