--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -288,9 +288,9 @@ jobs:
                     BRANCH=<< pipeline.parameters.BASE_BRANCH>>
                   fi
                   echo Trigger build on branch $BRANCH ..
-                  curl -X POST --url 'https://circleci.com/api/v2/project/gh/Jahia/jahia-ee/pipeline'
-                    --header 'circle-token:'"$CIRCLECI_PIPELINE_LAUNCH_TOKEN"''
-                    --header 'content-type:application/json'
+                  curl -X POST --url 'https://circleci.com/api/v2/project/gh/Jahia/jahia-ee/pipeline' \
+                    --header 'circle-token:'"$CIRCLECI_PIPELINE_LAUNCH_TOKEN"'' \
+                    --header 'content-type:application/json' \
                     --data '{ "parameters":{"run_core_code_change":true, "run_pull_request":true, "PARENT_IMAGE_TAG":"'"`cat image.tag`"'"}, "branch":"'"$BRANCH"'" }'
 
 # Pipeline parameter must be declared
