--- a/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
+++ b/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
@@ -194,7 +194,11 @@ xmlParserAPIs.jar,\
 xom-*.jar,\
 derby*.jar,\
 mysql-connector-java-*.jar,\
+ojdbc*.jar,\
+orai18n-*.jar,\
 postgresql-*.jar,\
+sqljdbc*.jar,\
+mssql-jdbc-*.jar,\
 mariadb-java-client-*.jar
 
 # Default list of JAR files that should be scanned that overrides the default
