--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -96,7 +96,7 @@ jobs:
             - run:
                 name: Build graalvm image
                 working_directory: ~/source/docker-jahia
-                command: mvn -s ../.circleci/.circleci.settings.xml -e -Dparent.tag=$(cat ../parent.tag)"-graalvm -Dimage.tag="$(cat ../image.tag)"-graalvm deploy -Dbamboo.buildNumber=$CIRCLE_BUILD_NUM
+                command: mvn -s ../.circleci/.circleci.settings.xml -e -Dparent.tag=`cat ../parent.tag`-graalvm -Dimage.tag=`cat ../image.tag`-graalvm deploy -Dbamboo.buildNumber=$CIRCLE_BUILD_NUM
       - when:
           condition: << pipeline.parameters.run_pull_request >>
           steps:
