--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -226,12 +226,12 @@ workflows:
   scheduled:
     triggers:
       - schedule:
-          cron: "0 6,12,18 * * *"
+          cron: "0 4,10,16 * * *"
           filters:
             branches:
               only:
                 - master
-                - /JAHIA-[0-9]-[0-9]-[0-9]-X-BRANCH/
+                - /JAHIA-7-3-[8-9]-X-BRANCH/
     jobs:
       - checkout:
           name: Scheduled checkout
