--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -110,7 +110,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-repository-explorer</artifactId>
-            <version>1.1.0</version>
+            <version>1.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
