--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -266,7 +266,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>siteSettings</artifactId>
-            <version>8.2.0</version>
+            <version>8.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
