--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -285,7 +285,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>2.5.0</version>
+            <version>2.6.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
