--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,7 +200,7 @@ jobs:
             if [[ "<< pipeline.parameters.JAHIA_PRIVATE_SHA1 >>" != "" ]]; then
               CONTENT_TYPE_H='Content-Type:application/json'
               AUTH_H="Authorization: token ${GITHUB_API_TOKEN}"
-              DATA='{"state":"pending","target_url":"'"${CIRCLE_BUILD_URL}"'","description":"'"${CIRCLE_PROJECT_REPONAME}"': '"${CIRCLE_JOB}"'","context":"default"}'
+              DATA='{"state":"pending","target_url":"'"${CIRCLE_BUILD_URL}"'","description":"'"${CIRCLE_PROJECT_REPONAME}"': '"${CIRCLE_JOB}"'","context":"ci/circleci"}'
               echo $DATA
               curl -H "$CONTENT_TYPE_H" -H "$AUTH_H" -d "$DATA" -X POST https://api.github.com/repos/jahia/jahia-private/statuses/<< pipeline.parameters.JAHIA_PRIVATE_SHA1 >>
             fi       
@@ -279,13 +279,13 @@ jobs:
             if [[ "<< pipeline.parameters.JAHIA_PRIVATE_SHA1 >>" != "" ]]; then          
               cd << parameters.TESTS_PATH >>
               if [[ ! -e ./artifacts/results/test_success ]]; then
-                STATUS='success'
-              else
                 STATUS='failure'
+              else
+                STATUS='success'
               fi
               CONTENT_TYPE_H='Content-Type:application/json'
               AUTH_H="Authorization: token ${GITHUB_API_TOKEN}"
-              DATA='{"state":"'"${STATUS}"'","target_url":"'"${CIRCLE_BUILD_URL}"'","description":"'"${CIRCLE_PROJECT_REPONAME}"': '"${CIRCLE_JOB}"'","context":"default"}'
+              DATA='{"state":"'"${STATUS}"'","target_url":"'"${CIRCLE_BUILD_URL}"'","description":"'"${CIRCLE_PROJECT_REPONAME}"': '"${CIRCLE_JOB}"'","context":"ci/circleci"}'
               echo $DATA
               curl -H "$CONTENT_TYPE_H" -H "$AUTH_H" -d "$DATA" -X POST https://api.github.com/repos/jahia/jahia-private/statuses/<< pipeline.parameters.JAHIA_PRIVATE_SHA1 >>
             fi              
