--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -472,7 +472,8 @@ workflows:
   scheduled:
     triggers:
       - schedule:
-          cron: "0 4,10,16 * * *"
+          # At minute 0 past hour 4, 10, and 16 on every day-of-week from Monday through Friday
+          cron: "0 4,10,16 * * 1-5"
           filters:
             branches:
               only:
