BACKLOG-13914 - Update filter of scheduled jobs to only run on latest maintenance branch (#244) [skip ci]

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -233,7 +233,7 @@ workflows:
             branches:
               only:
                 - master
-                - /JAHIA-7-3-9-X-BRANCH/
+                - ${JAHIA_LATEST_MAINTENANCE_BRANCH}
     jobs:
       - checkout:
           name: Scheduled checkout
