--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -122,7 +122,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>content-editor</artifactId>
-            <version>3.2.0</version>
+            <version>3.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
