--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -352,7 +352,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
-            <version>4.2.0</version>
+            <version>4.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
