--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -170,7 +170,7 @@
         <dependency>
            <groupId>org.jahia.modules</groupId>
            <artifactId>external-provider-users-groups</artifactId>
-           <version>2.0.0</version>
+           <version>2.1.0-SNAPSHOT</version>
            <scope>runtime</scope>
        </dependency>
         <dependency>
