--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -230,7 +230,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>2.2.0</version>
+            <version>2.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
