--- a/jahia-installer-package/pom.xml
+++ b/jahia-installer-package/pom.xml
@@ -291,7 +291,7 @@
                             <dependency>
                                 <groupId>com.thoughtworks.xstream</groupId>
                                 <artifactId>xstream</artifactId>
-                                <version>1.4.16</version>
+                                <version>${xstream.version}</version>
                             </dependency>
                         </dependencies>
                     </plugin>
