--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -134,7 +134,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>default</artifactId>
-            <version>8.3.0</version>
+            <version>8.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
