--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -349,5 +349,11 @@
             <version>4.3.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>personal-api-tokens</artifactId>
+            <version>1.1.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 </project>
