--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -302,6 +302,12 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
+            <artifactId>webflow-filter</artifactId>
+            <version>2.0.0</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
             <artifactId>sdl-generator-tools</artifactId>
             <version>1.0.0</version>
             <scope>runtime</scope>
