--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -303,7 +303,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>webflow-filter</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
